<resources>
    <string name="app_name">MyDashBoard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fsd">Password Health</string>
    <string name="ss">nita</string>
    <string name="as">22</string>
    <string name="asrd">Compromised</string>
    <string name="re">114</string>
    <string name="sad">Reused</string>
    <string name="a123">Weak</string>
    <string name="awre">89</string>
    <string name="bbess">219</string>
    <string name="r212">82</string>
    <string name="score">Score</string>
    <string name="aoopa">JR</string>
    <string name="ttutur">Safe</string>
    <string name="sxa">Pending</string>
    <string name="tvs">travitscoot534@gmail.com</string>
    <string name="serae3eqa">Monitoring</string>
</resources>